force-app/main/default/objects/AI_Config_Override__c/AI_Config_Override__c.object-meta.xml
<CustomObject>
  <label>AI Config Override</label>
  <pluralLabel>AI Config Overrides</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>AI Config Override Number</label>
    <displayFormat>CFG-{0000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>