force-app/main/default/objects/AI_Config_Override__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
  <fullName>Last_Modified_By__c</fullName>
  <label>Last Modified By</label>
  <type>Lookup</type>
  <referenceTo>User</referenceTo>
  <relationshipLabel>Last Modified By</relationshipLabel>
  <relationshipName>Last_Modified_By</relationshipName>
</CustomField>