force-app/main/default/objects/AI_Config_Override__c/fields/Setting_Name__c.field-meta.xml
<CustomField>
  <fullName>Setting_Name__c</fullName>
  <label>Setting Name</label>
  <type>Text</type>
  <length>255</length>
</CustomField>