force-app/main/default/objects/AI_Config_Override__c/fields/Setting_Value__c.field-meta.xml
<CustomField>
  <fullName>Setting_Value__c</fullName>
  <label>Setting Value</label>
  <type>Text</type>
  <length>255</length>
</CustomField>